migrated hopefully all the code into this new structure + migrations ability(no need to use build_database.py)
