# be/handlers/__init__.py
@@ -1,0 +1,4 @@
+from .chathistory import *
+from .profiles import *
+from .users import *
+from .rtcuserinfo import *
